--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 
     </div>
 
+
+    <div class="text-center mt-3">
+        <button id="download-btn" class="btn btn-success" style="display:none;">
+            Descargá tu QR
+        </button>
+    </div>
+
+    <br><br>
     <!-- Footer completo de lado a lado -->
     <footer class="bg-primary text-white text-center py-3 w-100">
         <small>Agencia Gubernamental de Control © 2025</small>
