--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 <body>
 
     <!-- Contenido -->
-    <div class="container py-4">
+    <div class="container py-3">
 
         <h1 class="mb-4 text-center">Generador de Códigos QR</h1>
+        <p>Este sistema <strong>no guarda el codigo QR que generes</strong>, <br>se pierde una vez que hayas cerrado el
+            navegador, por favor <strong>guardalo bien</strong> luego de la descarga.</p>
 
         <div class="mb-3">
             <input type="text" class="form-control" id="link" placeholder="Introduce tu enlace aquí">
